src/components/v2/appDetails/appDetails.scss
.main {
    display: flex;
    flex-direction: column;
}

.app-detail__default-tab {
    max-width: 173px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

/* Start: Container height fixes */
.resource-node-wrapper .no-pod.no-pod--container {
    display: flex;
    flex-direction: column;
    height: 100%;
}
/* End: Container height fixes */

.helm-details {
    display: flex;
    flex-direction: column;
    flex: 1;
}

.app-info-bg {
    background: var(--window-bg);
}

